# rust-libnotify-hello

./: Cargo.toml
src/: main.rs
templates/: footer.index.hbs  form.html.hbs  head.html.hbs  head.index.hbs  index.html.hbs
